[package]
name = "imgui"
version = "0.2.1"
edition = "2018"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>", "imgui-rs contributors"]
description = "High-level Rust bindings to dear imgui"
homepage = "https://github.com/Gekkio/imgui-rs"
repository = "https://github.com/Gekkio/imgui-rs"
license = "MIT/Apache-2.0"
categories = ["gui", "api-bindings"]
readme = "README.markdown"

[badges]
travis-ci = { repository = "Gekkio/imgui-rs" }

[dependencies]
bitflags = "1.0"
glium = { version = "0.25", default-features = false, optional = true }
gfx = { version = "0.18", optional = true }
imgui-sys = { version = "0.2.1", path = "imgui-sys" }
lazy_static = "1.1"
parking_lot = "0.9"

[features]
default = ["docking"]
docking = []

[dev-dependencies]
memoffset = "0.5"

[workspace]
members = [
    "imgui-sys",
    "imgui-gfx-renderer",
    "imgui-glium-renderer",
    "imgui-winit-support"
]
exclude = [
    "imgui-examples",
    "imgui-gfx-examples",
    "imgui-sys-bindgen"
]
