[package]
name = "imgui-gfx-examples"
version = "0.0.0"
edition = "2018"
authors = ["The imgui-rs Developers"]
description = "imgui crate examples"
homepage = "https://github.com/imgui-rs/imgui-rs"
repository = "https://github.com/imgui-rs/imgui-rs"
license = "MIT/Apache-2.0"
publish = false

[features]
opengl = ["imgui-gfx-renderer/opengl"]
directx = ["imgui-gfx-renderer/directx"]
default = ["opengl"]

[dev-dependencies]
gfx = "0.18"
gfx_device_gl = "0.16"
gfx_window_glutin = "0.31"
glutin = "0.21"
image = "0.23"
imgui = { path = "../" }
imgui-gfx-renderer = { path = "../imgui-gfx-renderer" }
imgui-winit-support = { path = "../imgui-winit-support", default-features = false, features = ["winit-19"] }

[target.'cfg(windows)'.dev-dependencies]
gfx_device_dx11 = "0.8"
gfx_window_dxgi = "0.19"
