[package]
name = "imgui-gfx-renderer"
version = "0.4.0-pre"
edition = "2018"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>", "imgui-rs contributors"]
description = "gfx renderer for the imgui crate"
homepage = "https://github.com/Gekkio/imgui-rs"
repository = "https://github.com/Gekkio/imgui-rs"
license = "MIT/Apache-2.0"
categories = ["gui", "rendering"]

[features]
opengl = []
directx = []
default = ["opengl"]

[dependencies]
gfx = "0.18"
imgui = { version = "0.4.0-pre", path = "../", features = ["gfx"] }

[target.'cfg(windows)'.build-dependencies]
winapi = { version = "0.3", features = ["d3dcompiler"] }
