[package]
name = "imgui-gfx-renderer"
version = "0.8.1"
edition = "2018"
authors = ["The imgui-rs Developers"]
description = "gfx renderer for the imgui crate"
homepage = "https://github.com/imgui-rs/imgui-rs"
repository = "https://github.com/imgui-rs/imgui-rs"
license = "MIT/Apache-2.0"
categories = ["gui", "rendering"]

[features]
opengl = []
directx = []
default = ["opengl"]

[badges]
maintenance = { status = "deprecated" }

[dependencies]
gfx = "0.18"
imgui = { version = "0.8.0", path = "../imgui" }

[target.'cfg(windows)'.build-dependencies]
winapi = { version = "0.3", features = ["d3dcompiler"] }
