[package]
name = "imgui-glium-renderer"
version = "0.7.0"
edition = "2018"
authors = ["The imgui-rs Developers"]
description = "Glium renderer for the imgui crate"
homepage = "https://github.com/imgui-rs/imgui-rs"
repository = "https://github.com/imgui-rs/imgui-rs"
license = "MIT/Apache-2.0"
categories = ["gui", "rendering"]

[dependencies]
glium = { version = ">=0.28, < 0.31", default-features = false }
imgui = { version = "0.7.0", path = "../imgui" }
