[package]
name = "imgui-glium-renderer"
version = "0.10.0"
edition = "2018"
description = "Glium renderer for the imgui crate"
homepage = "https://github.com/imgui-rs/imgui-rs"
repository = "https://github.com/imgui-rs/imgui-rs"
documentation = "https://docs.rs/imgui-glium-renderer"
license = "MIT/Apache-2.0"
categories = ["gui", "rendering"]

[dependencies]
glium = { version = "0.32.1", default-features = false }
imgui = { version = "0.10.0", path = "../imgui" }

[dev-dependencies]
imgui-winit-support-27 = { path = "../imgui-winit-support-27" }
