[package]
name = "imgui-glium-renderer"
version = "0.11.0"
edition = "2021"
description = "Glium renderer for the imgui crate"
homepage = "https://github.com/imgui-rs/imgui-rs"
repository = "https://github.com/imgui-rs/imgui-rs"
documentation = "https://docs.rs/imgui-glium-renderer"
license = "MIT OR Apache-2.0"
categories = ["gui", "rendering"]

[dependencies]
glium = { version = "0.34.0", default-features = false }
imgui = { version = "0.11.0", path = "../imgui" }

[dev-dependencies]
glium = { version = "0.34.0", default-features = false, features = ["glutin_backend"] }
imgui-winit-support = {path = "../imgui-winit-support"}
glutin = "0.31.1"
glutin-winit = "0.4.2"
winit = { version = "0.29.3", features = ["rwh_05"] }
raw-window-handle = "0.5.0"
