[package]
name = "imgui-glow-renderer"
version = "0.12.0"
edition = "2021"
description = "glow renderer for the imgui crate"
homepage = "https://github.com/imgui-rs/imgui-rs"
repository = "https://github.com/imgui-rs/imgui-rs"
license = "MIT OR Apache-2.0"
categories = ["gui", "rendering"]

[dependencies]
imgui = { version = "0.12.0", path = "../imgui" }
glow = "0.13.1"
memoffset = "0.9"

[dev-dependencies]
glutin = "0.31.1"
glutin-winit = "0.4.2"
imgui-winit-support = { version = "0.12.0", path = "../imgui-winit-support" }
image = "0.23"
raw-window-handle = "0.5.0"
winit = { version = "0.29.3", features = ["rwh_05"] }

[features]
# Features here are used to opt-out of compiling code that depends on certain
# OpenGL features. If the features are enabled, the renderer will check that the
# feature is supported before attempting to use it. Only opt-out of any of these
# if you are certain you will only target platforms that lack the corresponding
# feature.
default = [
  "gl_extensions_support",
  "debug_message_insert_support",
  "bind_vertex_array_support",
  "vertex_offset_support",
  "clip_origin_support",
  "bind_sampler_support",
  "polygon_mode_support",
  "primitive_restart_support",
]
# Enable checking for OpenGL extensions
gl_extensions_support = []
# Support for `gl.debug_message_insert`
debug_message_insert_support = []
# Support for `glBindVertexArray`
bind_vertex_array_support = []
# Support for `glDrawElementsBaseVertex`
vertex_offset_support = []
# Support for `GL_CLIP_ORIGIN`
clip_origin_support = []
# Support for `glBindSampler`
bind_sampler_support = []
# Support for `glPolygonMode`
polygon_mode_support = []
# Support for `GL_PRIMITIVE_RESTART`
primitive_restart_support = []
