[package]
name = "imgui-glutin-support"
version = "0.0.22-pre"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>", "imgui-rs contributors"]
description = "glutin support code for the imgui crate"
homepage = "https://github.com/Gekkio/imgui-rs"
repository = "https://github.com/Gekkio/imgui-rs"
license = "MIT/Apache-2.0"
categories = ["gui"]

[badges]
travis-ci = { repository = "Gekkio/imgui-rs" }

[dependencies]
glutin = ">= 0.17, <= 0.18"
imgui = { version = "0.0.22-pre", path = "../" }
