[package]
name = "imgui-sdl2-support"
version = "0.8.1-alpha.0"
edition = "2018"
authors = ["The imgui-rs Developers"]
description = "sdl2 support code for the imgui crate"
homepage = "https://github.com/imgui-rs/imgui-rs"
repository = "https://github.com/imgui-rs/imgui-rs"
license = "MIT/Apache-2.0"
categories = ["gui"]

[dependencies]
imgui = { version = "0.8.1-alpha.0", path = "../imgui" }
