[package]
name = "imgui-sdl2-support"
version = "0.11.0"
edition = "2021"
authors = ["The imgui-rs Developers"]
description = "sdl2 support code for the imgui crate"
homepage = "https://github.com/imgui-rs/imgui-rs"
repository = "https://github.com/imgui-rs/imgui-rs"
documentation = "https://docs.rs/imgui-sdl2-support"
license = "MIT/Apache-2.0"
categories = ["gui"]

[dependencies]
imgui = { version = "0.11.0", path = "../imgui" }
sdl2 = "0.34.5"

[dev-dependencies]
glow = "0.12.0"
imgui-glow-renderer = { version = "0.11.0", path = "../imgui-glow-renderer" }
sdl2 = { version = "0.34.5", features = ["bundled", "static-link"] }
