[package]
name = "imgui-sys-bindgen"
version = "0.0.0"
authors = ["Joonas Javanainen <joonas.javanainen@gmail.com>", "imgui-rs contributors"]
edition = "2018"
description = "imgui-sys bindings updater"
homepage = "https://github.com/Gekkio/imgui-rs"
repository = "https://github.com/Gekkio/imgui-rs"
license = "MIT/Apache-2.0"
publish = false

[dependencies]
bindgen = "0.53"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"