[package]
name = "imgui-sys-bindgen"
version = "0.0.0"
authors = ["The imgui-rs Developers"]
edition = "2018"
description = "imgui-sys bindings updater"
homepage = "https://github.com/imgui-rs/imgui-rs"
repository = "https://github.com/imgui-rs/imgui-rs"
license = "MIT/Apache-2.0"
publish = false

[dependencies]
bindgen = { version = "0.56", default-features = false }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
