[package]
name = "imgui-sys"
version = "0.11.0"
edition = "2021"
description = "Raw FFI bindings to dear imgui"
homepage = "https://github.com/imgui-rs/imgui-rs"
repository = "https://github.com/imgui-rs/imgui-rs"
documentation = "https://docs.rs/imgui-sys"
license = "MIT OR Apache-2.0"
categories = ["gui", "external-ffi-bindings"]
build = "build.rs"
links = "imgui"

# exclude json, lua, and the imgui subdirs (imgui/examples, imgui/docs, etc)
# ..but we need imgui/misc/freetype/ for the freetype feature
exclude = [
    "third-party/*/*.json",
    "third-party/*/*.lua",
    "third-party/imgui/backends/",
    "third-party/imgui/docs/",
    "third-party/imgui/examples/",
    "third-party/imgui/misc/cpp/",
    "third-party/imgui/misc/debuggers/",
    "third-party/imgui/misc/fonts/",
    "third-party/imgui/misc/single_file/",
]

[dependencies]
chlorine = "1.0.7"
mint = "0.5.6"
cfg-if = "1"

[build-dependencies]
cc = "1.0.2"
pkg-config = { version = "0.3", optional = true }
vcpkg = { version = "0.2.15", optional = true }

[features]
default = []
wasm = []
docking = []
freetype = ["pkg-config"]
use-vcpkg = ["vcpkg"]
