[package]
name = "imgui-sys2"
version = "0.11.0"
edition = "2021"
description = "Raw FFI bindings to dear imgui"
homepage = "https://github.com/imgui-rs/imgui-rs"
repository = "https://github.com/imgui-rs/imgui-rs"
documentation = "https://docs.rs/imgui-sys"
license = "MIT OR Apache-2.0"
categories = ["gui", "external-ffi-bindings"]

[dependencies]
chlorine = "1.0.7"
mint = "0.5.6"
cfg-if = "1"

[build-dependencies]
cc = "1.0.2"
pkg-config = { version = "0.3", optional = true }
vcpkg = { version = "0.2.15", optional = true }

[features]
default = []
wasm = []
docking = []
freetype = ["pkg-config"]
use-vcpkg = ["vcpkg"]
