[package]
name = "imgui-winit-glow-renderer-viewports"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = { version="0.10.0", path="../imgui", features=["docking"] }

glow = "0.12.0"
glutin = "0.30.3"
raw-window-handle = "0.5.0"
winit = "0.28.2"
thiserror = "1.0.38"
glutin-winit = "0.3.0"
