[package]
name = "imgui-winit-glow-renderer-viewports"
version = "0.11.0"
edition = "2021"
description = "combined platform + renderer using the docking branch viewport feature"
homepage = "https://github.com/imgui-rs/imgui-rs"
repository = "https://github.com/imgui-rs/imgui-rs"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = { version = "0.11.0", path="../imgui", features=["docking"] }

glow = "~0.12.3"
glutin = "0.30.9"
raw-window-handle = "0.5.2"
winit = "0.27.5"
thiserror = "1.0.44"
glutin-winit = "0.2.2"
