[package]
name = "imgui-winit-support"
version = "0.8.3"
edition = "2018"
authors = ["The imgui-rs Developers"]
description = "winit support code for the imgui crate"
homepage = "https://github.com/imgui-rs/imgui-rs"
repository = "https://github.com/imgui-rs/imgui-rs"
license = "MIT/Apache-2.0"
categories = ["gui"]

[dependencies]
imgui = { version = "0.8.3", path = "../imgui" }
winit = { version = "0.26.0", default-features = false }
