[package]
name = "imgui-winit-support"
version = "0.11.0"
edition = "2018"
description = "winit support code for the imgui crate"
homepage = "https://github.com/imgui-rs/imgui-rs"
repository = "https://github.com/imgui-rs/imgui-rs"
documentation = "https://docs.rs/imgui-winit-support"
license = "MIT OR Apache-2.0"
categories = ["gui"]

[dependencies]
imgui = { version = "0.11.0", path = "../imgui" }
winit = { version = "0.27.2", default-features = false }
