[package]
name = "imgui"
version = "0.9.0"
edition = "2018"
authors = ["The imgui-rs Developers"]
description = "High-level Rust bindings to dear imgui"
homepage = "https://github.com/imgui-rs/imgui-rs"
repository = "https://github.com/imgui-rs/imgui-rs"
license = "MIT/Apache-2.0"
categories = ["gui", "api-bindings"]
readme = "../README.markdown"

exclude = ["/resources"]

[package.metadata.docs.rs]
features = ["freetype", "docking", "tables-api"]

[dependencies]
bitflags = "1"
imgui-sys = { version = "0.9.0", path = "../imgui-sys" }
mint = "0.5.6"
parking_lot = "0.12"
cfg-if = "1"

[features]
wasm = ["imgui-sys/wasm"]
freetype = ["imgui-sys/freetype"]
docking = ["imgui-sys/docking"]
# this api is in beta in the upstream imgui crate. See issue #524 for more info.
# it should be stable and fine to use though.
tables-api = []

[dev-dependencies]
memoffset = "0.6"
