[package]
name = "imgui"
version = "0.11.0"
edition = "2021"
description = "High-level Rust bindings to dear imgui"
homepage = "https://github.com/imgui-rs/imgui-rs"
repository = "https://github.com/imgui-rs/imgui-rs"
documentation = "https://docs.rs/imgui"
license = "MIT OR Apache-2.0"
categories = ["gui", "api-bindings"]
readme = "../README.markdown"

exclude = ["/resources"]

[package.metadata.docs.rs]
features = ["freetype", "docking", "tables-api"]

[dependencies]
bitflags = "1"
imgui-sys2 = { version = "0.11.0", path = "../imgui-sys2" }
mint = "0.5.6"
parking_lot = "0.12"
cfg-if = "1"

[features]
wasm = ["imgui-sys2/wasm"]
freetype = ["imgui-sys2/freetype"]
docking = ["imgui-sys2/docking"]
# this api is in beta in the upstream imgui crate. See issue #524 for more info.
# it should be stable and fine to use though.
tables-api = []

[dev-dependencies]
memoffset = "0.9"
