# See https://github.com/matklad/cargo-xtask for more on this pattern.
[package]
name = "xtask"
version = "0.1.0"
edition = "2018"
publish = false

[dependencies]
anyhow = "1"
smoljson = "0.1"
xshell = "0.1"
xflags = "0.2"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
