# See https://github.com/matklad/cargo-xtask for more on this pattern.
[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
xshell = "0.1"

serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
bindgen = "0.68.1"
clap = { version = "4.4.4", features = ["derive"] }
camino = "1.1.6"
